# grit

./: .conflict-files  .git-meta  AGENTS.md  AUTH_TASKS.md  Cargo.toml  Makefile  PLAN.md  README.md  TESTING.md  WINDOWS_PORT_PLAN.md  plan.md  progress.md  submodule-plan.md  t6-plan.md  test-results.md
.cargo/: config.toml
bench/: report.py  run-everyday.sh
data/: test-files.csv
docs/: index.html  install  install-nightly  install-nightly.ps1  install.ps1  test-progress-history.csv  test-progress-history.html  testfiles.html
grit/: Cargo.toml  README.md  build.rs
grit-cli/: Cargo.toml  README.md
grit-http-server/: Cargo.toml
grit-legacy/: Cargo.toml  README.md
grit-lib/: Cargo.toml
grit-protocol/: Cargo.toml
grit-simple/: Cargo.toml  README.md
grit-test-support/: Cargo.toml
grit-test-support/src/: lib.rs
grit-utils/: Cargo.toml
logs/: 2026-05-21_08:37-phase-2-promisor-fetch-blame.md  2026-05-30_1220-t7031-verify-tag-signed-ssh.md  2026-05-30_1313-t5402-post-merge-hook.md  2026-05-30_1809-t1092-sparse-checkout-compatibility.md  2026-05-30_1836-t1011-read-tree-sparse-checkout.md  2026-06-01_0000-t9-family.md  2026-06-01_15-24-t0090-cache-tree-t0120-dot-git-dir.md  2026-06-01_16-00-t0000-basic.md  2026-06-01_16:18-t0021-conversion.md  2026-06-01_2000-t2-family.md  2026-06-02_0000-t1-family.md  2026-06-02_0817-t4-family.md  2026-06-02_1339-t3-range-diff.md  2026-06-02_1343-t3-merge-pick.md  2026-06-02_1710-t6040-tracking-info.md  2026-06-02_2220-t7112-reset-submodule.md  2026-06-03_0000-t1-family.md  2026-06-03_1348-t6111-rev-list-treesame.md  (+53 more)
(+386 files in other folders)
