[package]
name = "grit-test-support"
version.workspace = true
edition.workspace = true
license = "MIT"
publish = false
description = "Shared integration-test infrastructure for the Grit workspace"
repository.workspace = true

[lints]
workspace = true

[dependencies]
similar.workspace = true
tempfile.workspace = true
